# midas

./: README.md
client/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  app.css  index.css
client/src/api/: market.ts  order.ts  risk.ts  traders.ts  trades.ts  websocket.ts
client/src/components/: Clock.tsx  Loading.tsx  MarketDataBanner.tsx  NewOrderForm.tsx  OrderColumn.tsx  RiskManagerForm.tsx  TradeHistory.tsx  TraderProfile.tsx  TrendArrow.tsx
client/src/hooks/: useClock.ts  useMarketData.ts  (+3 more)
platform/: CMakeLists.txt
platform/include/api/: Handlers.hpp  Server.hpp
platform/include/core/: OrderBook.hpp  OrderQueueManager.hpp
platform/include/core/database/: BaseMapping.hpp  BaseRepository.hpp  Database.hpp  OrderMapping.hpp  OrderRepository.hpp  TradeMapping.hpp  TradeRepository.hpp
platform/include/core/events/: EventLogger.hpp
platform/include/core/matcher/: DefaultMatchingStrategy.hpp  FOKMatchingStrategy.hpp  IOCMatchingStrategy.hpp  MatchingEngine.hpp  MatchingStrategy.hpp
platform/include/core/models/: Event.hpp  Order.hpp  Risk.hpp  Trade.hpp  Trader.hpp
platform/include/core/services/: ActiveOrderService.hpp  ConditionalOrderService.hpp  MarketService.hpp  RiskService.hpp  TradeService.hpp  TraderService.hpp
platform/include/lib/: database-utils.hpp  order-utils.hpp  server-utils.hpp  trader-utils.hpp
platform/scripts/: build.sh  debug.sh  run.sh  test.sh
platform/src/: main.cpp
platform/src/api/: Handlers.cpp  Server.cpp
platform/src/core/: OrderBook.cpp  OrderQueueManager.cpp
platform/src/core/database/: Database.cpp  OrderMapping.cpp  OrderRepository.cpp  TradeMapping.cpp  TradeRepository.cpp
platform/src/core/events/: EventLogger.cpp
platform/src/core/matcher/: DefaultMatchingStrategy.cpp  FOKMatchingStrategy.cpp  IOCMatchingStrategy.cpp  MatchingEngine.cpp
platform/src/core/models/: Event.cpp  Trader.cpp
platform/src/core/services/: ActiveOrderService.cpp  ConditionalOrderService.cpp  MarketService.cpp  RiskService.cpp  TradeService.cpp  TraderService.cpp
platform/src/lib/: order-utils.cpp  server-utils.cpp  trader-utils.cpp
platform/test/: ActiveOrderTest.cpp  ConditionalOrderTest.cpp  EventLoggerTest.cpp  RiskTest.cpp
platform/test/mocks/: MockDatabase.hpp  MockRiskService.hpp  MockTrader.hpp  MockTraderService.hpp
(+4 files in other folders)
